# crusty-tour

./: .gitattributes  .gitignore
CrustyTour-iOS/CrustyTour/: AppDelegate.swift  CTARCLView.swift  CTARCLViewController.swift  Constants.swift  TestModelIO.swift
CrustyTour-iOS/CrustyTour.xcodeproj/: project.pbxproj
CrustyTour-iOS/CrustyTour/Assets.xcassets/Castro.imageset/: Contents.json
CrustyTour-iOS/CrustyTour/Assets.xcassets/N39W121-slope-012422-slope-colormap.imageset/: Contents.json
CrustyTour-iOS/CrustyTour/Assets.xcassets/N39W121_translate_hmm_stl.dataset/: Contents.json
CrustyTour-iOS/CrustyTour/CTPlayground.playground/: Contents.swift  timeline.xctimeline
CrustyTour-iOS/CrustyTour/CrustyTour.scnassets/: N39W121_translate_hmm_obj.obj.mtl  SceneKit Scene.scn
CrustyTour-iOS/CrustyTour/Experience.rcproject/: com.apple.RCFoundation.Project
CrustyTour-iOS/CrustyTour/Experience.rcproject/SceneThumbnails/F9610871-0955-494F-A5C3-51D1A281BAB3.thumbnails/: square  wide
CrustyTour-iOS/CrustyTourUITests/: CrustyTourUITests.swift
CrustyTour/CrustyTour/: AppDelegate.swift  CTARCLView.swift  CTARView.swift  CTARView_old.swift  ContentView_old.swift
CrustyTour/CrustyTour.xcodeproj/: project.pbxproj
CrustyTour/CrustyTourTests/: CrustyTourTests.swift
CrustyTour/CrustyTourUITests/: CrustyTourUITestsLaunchTests.swift
py/: ex-dem-processing.py  pyproject.toml  rasterio-ex.py
