[tool.poetry]
name = "CrustyTourUtils"
version = "0.1.0"
description = ""
authors = ["Madelaine Boyd <madelaine.boyd+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
GDAL = "^3.4.1"
rasterio = "^1.2.10"
elevation = "^1.1.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
